# e-kyc-skripsi

./: .dockerignore  .gitignore  Cargo.toml  Tiltfile  go.mod  go.sum
mobile/: project-idea_beneficiary.txt
services/api-gateway/: Cargo.toml  README.md  build.rs
services/api-gateway/cmd/: main.go
services/api-gateway/internal/domain/: face_matching_domain.go
services/api-gateway/internal/infrastructure/http/: face_matching_http.go
services/api-gateway/internal/infrastructure/repository/: face_matching_repo.go
services/api-gateway/internal/service/: face_matching_service.go
services/api-gateway/src/: main.rs
services/api-gateway/src/internal/: mod.rs
services/api-gateway/src/internal/domain/: repositories.rs  services.rs
services/api-gateway/src/internal/domain/entities/: ekyc.rs  mod.rs  session.rs  user.rs
services/api-gateway/src/internal/infrastructure/: mod.rs
services/api-gateway/src/internal/infrastructure/database/: mod.rs  postgres.rs  redis.rs
services/api-gateway/src/internal/infrastructure/grpc/: ai_support.rs  mod.rs
services/api-gateway/src/internal/infrastructure/http/: axum_server.rs  backoffice_proxy.rs  ekyc_handlers.rs  handlers.rs  media_client.rs  mod.rs
services/api-gateway/src/internal/infrastructure/repository/: mod.rs  redis_repo.rs
services/api-gateway/src/internal/service/: command.rs  ekyc_service.rs  mod.rs  ocr_ktp_service.rs
services/api-gateway/src/pkg/types/: dto.rs  error.rs  mod.rs
services/api-gateway/src/pkg/utils/: logger.rs  mod.rs  retrieve_env.rs
shared/: mock.ts
shared/db/: backoffice_seed.go  (+3 more)
(+613 files in other folders)
