[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
tower-http = {version = "0.5", features = ["trace"]}
http = "1.0"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
async-trait = "0.1"
base64 = "0.22"

[build-dependencies]
tonic-build = "0.11"
